src/libui/libui.cr

    fun menu_item_enable = uiMenuItemEnable(m : Pointer(Void))
    fun menu_item_disable = uiMenuItemDisable(m : Pointer(Void))
    fun menu_item_on_clicked = uiMenuItemOnClicked(m : Pointer(Void), f : (Pointer(Void), Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun menu_item_checked = uiMenuItemChecked(m : Pointer(Void)) : LibC::Int
    fun menu_item_set_checked = uiMenuItemSetChecked(m : Pointer(Void), checked : LibC::Int)
    alias Menu = Void
    fun menu_append_item = uiMenuAppendItem(m : Pointer(Void), name : Pointer(LibC::Char)) : Pointer(Void)
    fun menu_append_check_item = uiMenuAppendCheckItem(m : Pointer(Void), name : Pointer(LibC::Char)) : Pointer(Void)
    fun menu_append_quit_item = uiMenuAppendQuitItem(m : Pointer(Void)) : Pointer(Void)
    fun menu_append_preferences_item = uiMenuAppendPreferencesItem(m : Pointer(Void)) : Pointer(Void)
    fun menu_append_about_item = uiMenuAppendAboutItem(m : Pointer(Void)) : Pointer(Void)
    fun menu_append_separator = uiMenuAppendSeparator(m : Pointer(Void))
    fun new_menu = uiNewMenu(name : Pointer(LibC::Char)) : Pointer(Void)
    fun open_file = uiOpenFile(parent : Pointer(Void)) : Pointer(LibC::Char)
    fun open_folder = uiOpenFolder(parent : Pointer(Void)) : Pointer(LibC::Char)
    fun save_file = uiSaveFile(parent : Pointer(Void)) : Pointer(LibC::Char)
    fun msg_box = uiMsgBox(parent : Pointer(Void), title : Pointer(LibC::Char), description : Pointer(LibC::Char))
    fun msg_box_error = uiMsgBoxError(parent : Pointer(Void), title : Pointer(LibC::Char), description : Pointer(LibC::Char))
    alias Area = Void

    struct AreaHandler
      draw : (Pointer(Void), Pointer(Void), Pointer(Void) -> Void)
      mouse_event : (Pointer(Void), Pointer(Void), Pointer(Void) -> Void)
      mouse_crossed : (Pointer(Void), Pointer(Void), LibC::Int -> Void)
      drag_broken : (Pointer(Void), Pointer(Void) -> Void)
      key_event : (Pointer(Void), Pointer(Void), Pointer(Void) -> LibC::Int)
    end

    enum WindowResizeEdge
      Left
      Top
      Right
      Bottom
      TopLeft
      TopRight
      BottomLeft
      BottomRight
    end

    struct AreaDrawParams
      context : Pointer(Void)
      area_width : LibC::Double
      area_height : LibC::Double
      clip_x : LibC::Double
      clip_y : LibC::Double
      clip_width : LibC::Double
      clip_height : LibC::Double
    end

    enum Modifiers
      Ctrl  = 1 << 0
      Alt   = 1 << 1
      Shift = 1 << 2
      Super = 1 << 3
    end

    struct AreaMouseEvent
      x : LibC::Double
      y : LibC::Double
      area_width : LibC::Double
      area_height : LibC::Double
      down : LibC::Int
      up : LibC::Int
      count : LibC::Int
      modifiers : Modifiers
      held1_to64 : UInt64
    end

    enum ExtKey
      Escape    = 1
      Insert # equivalent to "Help" on Apple keyboards
      Delete
      Home
      End
      PageUp
      PageDown
      Up
      Down
      Left
      Right
      F1 # F1..F12 are guaranteed to be consecutive
      F2
      F3
      F4
      F5
      F6
      F7
      F8
      F9
      F10
      F11
      F12
      N0 # numpad keys; independent of Num Lock state
      N1 # N0..N9 are guaranteed to be consecutive
      N2
      N3
      N4
      N5
      N6
      N7
      N8
      N9
      NDot
      NEnter
      NAdd
      NSubtract
      NMultiply
      NDivide
    end

    struct AreaKeyEvent
      key : LibC::Char
      ext_key : ExtKey
      modifier : Modifiers
      modifiers : Modifiers
      up : LibC::Int
    end

    alias DrawContext = Void
    fun area_set_size = uiAreaSetSize(a : Pointer(Void), width : LibC::Int, height : LibC::Int)
    fun area_queue_redraw_all = uiAreaQueueRedrawAll(a : Pointer(Void))
    fun area_scroll_to = uiAreaScrollTo(a : Pointer(Void), x : LibC::Double, y : LibC::Double, width : LibC::Double, height : LibC::Double)
    fun area_begin_user_window_move = uiAreaBeginUserWindowMove(a : Pointer(Void))
    fun area_begin_user_window_resize = uiAreaBeginUserWindowResize(a : Pointer(Void), edge : WindowResizeEdge)
    fun new_area = uiNewArea(ah : Pointer(Void)) : Pointer(Void)
    fun new_scrolling_area = uiNewScrollingArea(ah : Pointer(Void), width : LibC::Int, height : LibC::Int) : Pointer(Void)
    alias DrawPath = Void

    enum DrawBrushType
      Solid
      LinearGradient
      RadialGradient
      Image
    end

    enum DrawLineCap
      Flat
      Round
      Square
    end

    enum DrawLineJoin
      Miter
      Round
      Bevel
    end

    struct DrawBrush
      type : DrawBrushType
      r : LibC::Double
      g : LibC::Double
      b : LibC::Double
      a : LibC::Double
      x0 : LibC::Double
      y0 : LibC::Double
      x1 : LibC::Double
      y1 : LibC::Double
      outer_radius : LibC::Double
      stops : Pointer(Void)
      num_stops : LibC::SizeT
    end

    struct DrawStrokeParams
      cap : DrawLineCap
      join : DrawLineJoin
      thickness : LibC::Double
      miter_limit : LibC::Double
      dashes : Pointer(LibC::Double)
      num_dashes : LibC::SizeT
      dash_phase : LibC::Double
    end

    enum DrawFillMode
      Winding
      Alternate
    end

    struct DrawMatrix
      m11 : LibC::Double
      m12 : LibC::Double
      m21 : LibC::Double
      m22 : LibC::Double
      m31 : LibC::Double
      m32 : LibC::Double
    end

    struct DrawBrushGradientStop
      pos : LibC::Double
      r : LibC::Double
      g : LibC::Double
      b : LibC::Double
      a : LibC::Double
    end

    fun draw_new_path = uiDrawNewPath(fill_mode : DrawFillMode) : Pointer(Void)
    fun draw_free_path = uiDrawFreePath(p : Pointer(Void))
    fun draw_path_new_figure = uiDrawPathNewFigure(p : Pointer(Void), x : LibC::Double, y : LibC::Double)
    fun draw_path_new_figure_with_arc = uiDrawPathNewFigureWithArc(p : Pointer(Void), x_center : LibC::Double, y_center : LibC::Double, radius : LibC::Double, start_angle : LibC::Double, sweep : LibC::Double, negative : LibC::Int)
    fun draw_path_line_to = uiDrawPathLineTo(p : Pointer(Void), x : LibC::Double, y : LibC::Double)
    fun draw_path_arc_to = uiDrawPathArcTo(p : Pointer(Void), x_center : LibC::Double, y_center : LibC::Double, radius : LibC::Double, start_angle : LibC::Double, sweep : LibC::Double, negative : LibC::Int)
    fun draw_path_bezier_to = uiDrawPathBezierTo(p : Pointer(Void), c1x : LibC::Double, c1y : LibC::Double, c2x : LibC::Double, c2y : LibC::Double, end_x : LibC::Double, end_y : LibC::Double)
    fun draw_path_close_figure = uiDrawPathCloseFigure(p : Pointer(Void))
    fun draw_path_add_rectangle = uiDrawPathAddRectangle(p : Pointer(Void), x : LibC::Double, y : LibC::Double, width : LibC::Double, height : LibC::Double)
    fun draw_path_ended = uiDrawPathEnded(p : Pointer(Void)) : LibC::Int
    fun draw_path_end = uiDrawPathEnd(p : Pointer(Void))
    fun draw_stroke = uiDrawStroke(c : Pointer(Void), path : Pointer(Void), b : Pointer(Void), p : Pointer(Void))
    fun draw_fill = uiDrawFill(c : Pointer(Void), path : Pointer(Void), b : Pointer(Void))
    fun draw_matrix_set_identity = uiDrawMatrixSetIdentity(m : Pointer(Void))
    fun draw_matrix_translate = uiDrawMatrixTranslate(m : Pointer(Void), x : LibC::Double, y : LibC::Double)
    fun draw_matrix_scale = uiDrawMatrixScale(m : Pointer(Void), x_center : LibC::Double, y_center : LibC::Double, x : LibC::Double, y : LibC::Double)
    fun draw_matrix_rotate = uiDrawMatrixRotate(m : Pointer(Void), x : LibC::Double, y : LibC::Double, amount : LibC::Double)
    fun draw_matrix_skew = uiDrawMatrixSkew(m : Pointer(Void), x : LibC::Double, y : LibC::Double, xamount : LibC::Double, yamount : LibC::Double)
    fun draw_matrix_multiply = uiDrawMatrixMultiply(dest : Pointer(Void), src : Pointer(Void))
    fun draw_matrix_invertible = uiDrawMatrixInvertible(m : Pointer(Void)) : LibC::Int
    fun draw_matrix_invert = uiDrawMatrixInvert(m : Pointer(Void)) : LibC::Int
    fun draw_matrix_transform_point = uiDrawMatrixTransformPoint(m : Pointer(Void), x : Pointer(LibC::Double), y : Pointer(LibC::Double))
    fun draw_matrix_transform_size = uiDrawMatrixTransformSize(m : Pointer(Void), x : Pointer(LibC::Double), y : Pointer(LibC::Double))
    fun draw_transform = uiDrawTransform(c : Pointer(Void), m : Pointer(Void))
    fun draw_clip = uiDrawClip(c : Pointer(Void), path : Pointer(Void))
    fun draw_save = uiDrawSave(c : Pointer(Void))
    fun draw_restore = uiDrawRestore(c : Pointer(Void))
    alias Attribute = Void
    fun free_attribute = uiFreeAttribute(a : Pointer(Void))
    fun attribute_get_type = uiAttributeGetType(a : Pointer(Void))
    fun new_family_attribute = uiNewFamilyAttribute(family : Pointer(LibC::Char)) : Pointer(Void)
    fun attribute_family = uiAttributeFamily(a : Pointer(Void)) : Pointer(LibC::Char)
    fun new_size_attribute = uiNewSizeAttribute(size : LibC::Double) : Pointer(Void)
    fun attribute_size = uiAttributeSize(a : Pointer(Void)) : LibC::Double

    enum TextWeight
      Minimum    =    0
      Thin       =  100
      UltraLight =  200
      Light      =  300
      Book       =  350
      Normal     =  400
      Medium     =  500
      SemiBold   =  600
      Bold       =  700
      UltraBold  =  800
      Heavy      =  900
      UltraHeavy =  950
      Maximum    = 1000
    end

    fun new_weight_attribute = uiNewWeightAttribute(weight : TextWeight) : Pointer(Void)
    fun attribute_weight = uiAttributeWeight(a : Pointer(Void))

    enum TextItalic
      Normal
      Oblique
      Italic
    end

    fun new_italic_attribute = uiNewItalicAttribute(italic : TextItalic) : Pointer(Void)
    fun attribute_italic = uiAttributeItalic(a : Pointer(Void))

    enum TextStretch
      UltraCondensed
      ExtraCondensed
      Condensed
      SemiCondensed
      Normal
      SemiExpanded
      Expanded
      ExtraExpanded
      UltraExpanded
    end

    fun new_stretch_attribute = uiNewStretchAttribute(stretch : TextStretch) : Pointer(Void)
    fun attribute_stretch = uiAttributeStretch(a : Pointer(Void))
    fun new_color_attribute = uiNewColorAttribute(r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Void)
    fun attribute_color = uiAttributeColor(a : Pointer(Void), r : Pointer(LibC::Double), g : Pointer(LibC::Double), b : Pointer(LibC::Double), alpha : Pointer(LibC::Double))
    fun new_background_attribute = uiNewBackgroundAttribute(r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Void)

    enum Underline
      None
      Single
      Double
      Suggestion
    end

    fun new_underline_attribute = uiNewUnderlineAttribute(u : Underline) : Pointer(Void)
    fun attribute_underline = uiAttributeUnderline(a : Pointer(Void))

    enum UnderlineColor
      Custom
      Spelling
      Grammar
      Auxiliary
    end
